update to latest code changes from json.org